src/test/resources/good/provided/core/core035.lat
int main() {
    while (true) {
        int x;
        x = readInt();
        if (x == 1)
            return 0;
        else
            printString("jeszcze raz");
    }
}
